--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
 </head>
 <body class="body">
     <div class="row">
-        <div class="menu">...</div>
-        <div class="main">.....</div>
+        <div class="menu">
+            <div class="dropdown">
+                <button class="dropbtn">Dropdown</button>
+                <div class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div>
+        </div>
+        <div class="main">.
+        </div>
     </div>
 </body>
 </html>
