--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
     <script src='app.js'></script>
 </head>
 <body class="body">
-    <div class="row">
-        <div class="menu">
-            <div class="dropdown">
-                <button class="dropbtn">Dropdown</button>
-                <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
-                </div>
-              </div>
-        </div>
-        <div class="main">.
-        </div>
-    </div>
+    <ul>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">Menu</a>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+        </li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+      </ul>      
 </body>
 </html>
